Fix image-size-X on mobile and remove image-width-X

--- a/[class] image-size-X.css
+++ b/[class] image-size-X.css
@@ -1,40 +1,21 @@
 /* Limits all images & media to the specified size */
 
 .workspace-leaf-content .image-size-100 :is(img:not([width]), audio, video) {
-  max-width: 100px;
-  max-height: 100px;
+  max-width: min(100px, 100%);
+  max-height: min(100px, 100%);
 }
 
 .workspace-leaf-content .image-size-200 :is(img:not([width]), audio, video) {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: min(200px, 100%);
+  max-height: min(200px, 100%);
 }
 
 .workspace-leaf-content .image-size-300 :is(img:not([width]), audio, video) {
-  max-width: 300px;
-  max-height: 300px;
+  max-width: min(300px, 100%);
+  max-height: min(300px, 100%);
 }
 
 .workspace-leaf-content .image-size-400 :is(img:not([width]), audio, video) {
-  max-width: 400px;
-  max-height: 400px;
-}
-
-
-/* width only */
-
-.workspace-leaf-content .image-width-100 :is(img:not([width]), audio, video) {
-  max-width: 100px;
-}
-
-.workspace-leaf-content .image-width-200 :is(img:not([width]), audio, video) {
-  max-width: 200px;
-}
-
-.workspace-leaf-content .image-width-300 :is(img:not([width]), audio, video) {
-  max-width: 300px;
-}
-
-.workspace-leaf-content .image-width-400 :is(img:not([width]), audio, video) {
-  max-width: 400px;
+  max-width: min(400px, 100%);
+  max-height: min(400px, 100%);
 }
